fixed issue with product detail tabs being covered by top padding

--- a/style.scss
+++ b/style.scss
@@ -2012,6 +2012,7 @@ body.international .product-overview .column-right .product-free-shipping {
 		width: 560px;
 		padding: 0 0 10px 20px;
 		float: left;
+		overflow: hidden;
 	}
 		.single-gnu_bindings .product-details .product-technology {
 			padding: 10px 0 10px 0;
